<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/menuBigTextSize"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/buttonSimpleCalculator"
            android:layout_width="@dimen/menuButtonSize"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue3"
            android:text="@string/simple_calculator"
            android:textSize="@dimen/menuTextSize" />

        <Button
            android:id="@+id/buttonAdvancedCalculator"
            android:layout_width="@dimen/menuButtonSize"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue3"
            android:text="@string/advanced_calculator"
            android:textSize="@dimen/menuTextSize" />

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="@dimen/menuButtonSize"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue3"
            android:text="@string/about"
            android:textSize="@dimen/menuTextSize" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="@dimen/menuButtonSize"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue2"
            android:text="@string/exit"
            android:textSize="@dimen/menuTextSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>